# includes_scanner

./: .gitignore  CMakeLists.txt
src/: ArgParser.cpp  ArgParser.hpp  FileProcessor.cpp  FileProcessor.hpp  FilesystemScanner.cpp  FilesystemScanner.hpp  TaskManager.hpp  main.cpp
test/include0/: foo.h
test/include1/: a.h  b.h
test/src/: main.cpp  test.cpp  test.h
